<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Holo">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="3pt">

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5pt"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:inputType="numberDecimal"
            android:textSize="40sp"
            android:theme="@style/AppTheme"></EditText>

    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="216dip"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginTop="3pt"
        android:background="@android:color/background_dark"
        android:gravity="center"
        android:stretchColumns="0, 1, 2, 3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_1"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_1"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_2"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_3"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_plus"
                style="?android:attr/borderlessButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_4"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_4"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_5"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_6"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_minus"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_minus"
                style="?android:attr/borderlessButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_7"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_7"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_8"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_9"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_mult"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_mult"
                style="?android:attr/borderlessButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <Button
                android:id="@+id/button_0"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_0"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_decimal"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_decimal"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_clear"
                style="?android:attr/borderlessButtonStyle" />

            <Button
                android:id="@+id/button_divide"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_divide"
                style="?android:attr/borderlessButtonStyle" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5pt"
        android:layout_marginRight="5pt"
        android:layout_marginTop="3pt"
        android:gravity="top|center_vertical|start"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0dip"
            android:layout_height="60dip"
            android:layout_weight="1"
            android:text="@string/button_equals"
            style="?android:attr/borderlessButtonStyle" />
    </LinearLayout>

</LinearLayout>
